[package]
name = "Cloth"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
wgpu-bootstrap = { git = "https://github.com/qlurkin/wgpu-bootstrap", tag = "v0.4.2" }
log = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18"
eframe = { version = "0.29", features = ["wgpu"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
